<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/app_margin">

    <TextView
        android:id="@+id/dialog_filter_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextPrimary.Large"
        android:text="@string/string_dialog_filter_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/app_margin"/>

    <RadioGroup
        android:id="@+id/dialog_filter_radio_group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_filter_label"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginStart="@dimen/app_margin">

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/dialog_filter_checkbox_title"
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_title"
            android:padding="@dimen/app_margin"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/dialog_filter_checkbox_content"
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_content"
            android:padding="@dimen/app_margin"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/dialog_filter_checkbox_status"
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_status"
            android:padding="@dimen/app_margin"/>

        <com.google.android.material.checkbox.MaterialCheckBox
            android:id="@+id/dialog_filter_checkbox_priority"
            style="@style/TextPrimary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_priority"
            android:padding="@dimen/app_margin"/>
    </RadioGroup>


    <com.google.android.material.button.MaterialButton
        android:id="@+id/dialog_filter_button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_filter_radio_group"
        android:layout_marginTop="@dimen/app_margin" />

</androidx.constraintlayout.widget.ConstraintLayout>