<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.editScreen.ContentEditFragment"
    android:padding="@dimen/app_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/title"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_title_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            style="@style/TextPrimary.Large"
            android:background="@drawable/dr_item_recycler"
            android:paddingStart="@dimen/app_margin_big"
            android:paddingEnd="@dimen/app_margin_big"
            android:paddingBottom="@dimen/app_margin"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/content_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/content_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/edit_content_container_attribute"
        android:hint="@string/editText"
        android:layout_marginTop="@dimen/app_margin"
        android:layout_marginBottom="@dimen/app_margin"
        app:boxBackgroundMode="none">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/content_content_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start|top"
            android:inputType="textMultiLine"
            style="@style/TextPrimary"
            android:background="@drawable/dr_item_recycler"
            android:paddingStart="@dimen/app_margin_big"
            android:paddingEnd="@dimen/app_margin_big"
            android:paddingBottom="@dimen/app_margin"/>

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edit_content_container_attribute"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/dr_item_recycler"
        android:padding="@dimen/app_margin"
        android:layout_marginBottom="@dimen/app_margin"
        android:paddingStart="@dimen/app_margin_big"
        android:paddingEnd="@dimen/app_margin_big">

        <TextView
            android:id="@+id/edit_content_tv_label_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Status:"
            style="@style/TextPrimary"/>

        <TextView
            android:id="@+id/edit_content_tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/status_in_progress"
            style="@style/TextPrimary.Active"/>

        <View
            android:id="@+id/edit_content_line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/edit_content_tv_label_status"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/darkGray"/>

        <TextView
            android:id="@+id/edit_content_tv_label_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line1"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Date:"
            style="@style/TextPrimary"
            android:layout_marginTop="@dimen/app_margin"/>

        <TextView
            android:id="@+id/edit_content_tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line1"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="__.__.____"
            style="@style/TextPrimary.Active"
            android:layout_marginTop="@dimen/app_margin"/>

        <View
            android:id="@+id/edit_content_line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/edit_content_tv_label_date"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/darkGray"/>

        <TextView
            android:id="@+id/edit_content_tv_label_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line2"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Time:"
            style="@style/TextPrimary"
            android:layout_marginTop="@dimen/app_margin"/>

        <TextView
            android:id="@+id/edit_content_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line2"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="__:__"
            style="@style/TextPrimary.Active"
            android:layout_marginTop="@dimen/app_margin"/>

        <View
            android:id="@+id/edit_content_line3"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintTop_toBottomOf="@id/edit_content_tv_label_time"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="@dimen/app_margin"
            android:background="@color/darkGray"/>

        <TextView
            android:id="@+id/edit_content_tv_label_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line3"
            app:layout_constraintStart_toStartOf="parent"
            android:text="Priority:"
            style="@style/TextPrimary"
            android:layout_marginTop="@dimen/app_margin"/>

        <TextView
            android:id="@+id/edit_content_tv_priority"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/edit_content_line3"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="Normal"
            style="@style/TextPrimary.Active"
            android:layout_marginTop="@dimen/app_margin"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>